<resources>
    <string name="app_name">好生活</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="tab_home">首页</string>
    <string name="tab_community">邻里</string>
    <string name="tab_discover">好友</string>
    <string name="tab_profile">我的</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">更多</string>
    <string name="my_gold">我的金币</string>
    <string name="my_gold_balance">金币余额</string>
    <string name="rmb_yuan">元</string>
    <string name="income">收入</string>
    <string name="recharge">充值</string>
    <string name="give">赠送</string>
    <string name="income_list">收入明细</string>
    <string name="give_list">支出明细</string>
    <string name="recharge_list">充值记录</string>
    <string name="saoyisao">扫一扫</string>
    <string name="apply_permission">申请权限</string>
    <string name="accredit_permission">权限授权</string>
    <string name="edit_door_scan">编辑门禁</string>
    <string name="door_scan_help">门禁说明</string>
    <string name="door_scan">门禁</string>
    <string name="open_door">开门</string>
    <string name="parking">停车</string>
    <string name="gold_store">金币商城</string>
    <string name="near_life">周边优惠</string>
    <string name="furniture_repairs">家居维修</string>
    <string name="opinion">吐槽</string>
    <string name="e_pass">e费通</string>
    <string name="about_gold">了解金币</string>
    <string name="save_money">省钱秘籍</string>
    <string name="binding">立即绑定</string>
    <string name="treasure_life">财富生活</string>
    <string name="business">商圈</string>
    <string name="same_community">同小区的人</string>
    <string name="near_community">附近小区的人</string>
    <string name="gold">尊享金币</string>
    <string name="my_card">我的会员卡</string>
    <string name="my_money_managemer">我的理财</string>
    <string name="pay_history">缴费记录</string>
    <string name="recharge_history">充值记录</string>
    <string name="business_order">商家订单</string>
    <string name="my_house">我的房产</string>
    <string name="your_opinion">意见反馈</string>
    <string name="invite_friends">邀请好友</string>
    <string name="readed_all">全部已读</string>
    <string name="notify">通知</string>
    <string name="title_activity_treasure_life">TreasureLifeActivity</string>
    <string name="community_manager_service">物业宝</string>
    <string name="parking_service">停车宝</string>
    <string name="make_money_service">增值宝</string>
    <string name="borrow_service">好借贷</string>
    <string name="goto_authentication">去认证</string>
    <string name="add_house">新增房产</string>
    <string name="record_all">全部</string>
    <string name="record_electricity">买电</string>
    <string name="record_house">物业费</string>
    <string name="record_store">预缴费</string>
    <string name="record_park">停车费</string>
    <string name="no_card">你还没有会员卡</string>
    <string name="no_pay_history">你还没有缴过费</string>
    <string name="no_business_order">你还没有商家订单</string>
    <string name="no_recharge_history">你还没有充值记录</string>
    <string name="no_house">你还没有房产</string>
    <string name="no_money_manager">你还没有理财产品</string>
    <string name="submit">提交</string>
    <string name="input_friend_phone_num">请输入您好友的手机号</string>
    <string name="invite_rightnow">立即邀请</string>
    <string name="share">分享</string>
    <string name="input_your_opinion">请填写反馈内容:</string>
    <string name="house_manager">专属管家</string>
    <string name="login_out">退出登录</string>
    <string name="notice">消息推送</string>
    <string name="about_good_life">关于好生活</string>
    <string name="setting">设置</string>
    <string name="no_business">附近还没有商户</string>
    <string name="head_icon">头像</string>
    <string name="my_ORC">我的二维码</string>
    <string name="nick_name">昵称</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="address">地址</string>
    <string name="phone_num">手机</string>
    <string name="change_password">修改密码</string>
    <string name="save">保存</string>
    <string name="person_info">个人信息</string>
    <string name="loading">正在加载中</string>
    <string name="load_finish">没有更多内容</string>
    <string name="input_your_opinion_type">请选择反馈类型:</string>
    <string name="upload_photo">上传照片(可选)：</string>
    <string name="borrow">好借贷</string>
    <string name="e_pass_new">新e费通</string>
    <string name="e_repairs">e维修</string>
    <string name="e_complain">e投诉</string>
    <string name="e_notification">e通知</string>
    <string name="e_renting">e租房</string>
    <string name="e_message">e评价</string>
    <string name="e_fitting">e装修</string>
    <string name="e_power">e能源</string>
    <string name="e_parterner">e入伙</string>
    <string name="e_family">e家访</string>
    <string name="charity">慈善基金会</string>
    <string name="e_house">好生活住宅</string>
    <string name="phone_recharge">手机充值</string>
    <string name="on_sale">湖湘特卖</string>
    <string name="choiceness">环球精选</string>
    <string name="hua">花礼网</string>
    <string name="e_greeen">e绿化</string>
    <string name="e_eat">好食惠</string>
    <string name="e_education">e教育</string>
    <string name="hao_tour">好旅游</string>
    <string name="air_ticket">机票</string>
    <string name="qianxi_jewelry">千禧珠宝</string>
    <string name="one_rmb">一元购</string>
    <string name="notify_message_test">中共中央政治局5月26日下午就推动形成绿色发展方式和生活方式进行第四十一次集体学习。中共中央总书记习近平在主持学习时强调，推动形成绿色发展方式和生活方式是贯彻新发展理念的必然要求，必须把生态文明建设摆在全局工作的突出地位，坚持节约资源和保护环境的基本国策，坚持节约优先、保护优先、自然恢复为主的方针，形成节约资源和保护环境的空间格局、产业结构、生产方式、生活方式，努力实现经济社会发展和生态环境保护协同共进，为人民群众创造良好生产生活环境。</string>
    <string name="choose_recharge_limit">请选择需要充值的金额</string>
    <string name="choose_recharge_limit_by_yourself">或者手动输入充值金额</string>
    <string name="illegal_argument">输入的金额不合法</string>
    <string name="input_give_phone_num">请输入获赠人的账号(手机号)</string>
    <string name="next_step">下一步</string>
    <string name="history_record">历史记录</string>
    <string name="no_income_history">你还没有收入~</string>
    <string name="go_recharge">去充值</string>
</resources>
