<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBaseBackground"
    tools:context="com.zoesap.goodlife.activity.PersonInfoActivity">
    <include layout="@layout/include_top_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/divider_line">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/head_icon"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/b0_not_binded_head"
            android:layout_marginRight="@dimen/base_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/divider_line"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_ORC"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_go_icon_small"
            android:layout_marginRight="@dimen/base_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/divider_line"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nick_name"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow_go_icon_small"
            android:textSize="@dimen/text_size_medium"
            android:drawablePadding="@dimen/base_margin"
            android:text="访客153****6985"
            android:layout_marginRight="@dimen/base_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/divider_line"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow_go_icon_small"
            android:textSize="@dimen/text_size_medium"
            android:drawablePadding="@dimen/base_margin"
            android:text="访客153****6985"
            android:layout_marginRight="@dimen/base_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/divider_line"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow_go_icon_small"
            android:textSize="@dimen/text_size_medium"
            android:drawablePadding="@dimen/base_margin"
            android:text="--"
            android:layout_marginRight="@dimen/base_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/divider_line"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow_go_icon_small"
            android:textSize="@dimen/text_size_medium"
            android:drawablePadding="@dimen/base_margin"
            android:text="体验小区"
            android:layout_marginRight="@dimen/base_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/divider_line"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/phone_num"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow_go_icon_small"
            android:textSize="@dimen/text_size_medium"
            android:drawablePadding="@dimen/base_margin"
            android:text="15369856985"
            android:layout_marginRight="@dimen/base_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/divider_line"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_go_icon_small"
            android:layout_marginRight="@dimen/base_margin"
            />
    </LinearLayout>
</LinearLayout>
